Fix a pile of warnings Java 11 is complaining about.